--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,14 @@
 # Site settings
-title: Your awesome title
+title: Il Gusto
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Italienische Spezialitäten
+  Mautweg 7, 9232 Rosegg
+
+  Öffnungszeiten:
+  MO: 15:00 - 18:30
+  DI, MI, FR: 08:30 - 13:00 und 15:00 - 18:30
+  DO, SA: 08:30 - 13:00
 baseurl: "/il-gusto" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
