--- a/_config.yml
+++ b/_config.yml
@@ -2,14 +2,13 @@
 title: Il Gusto
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
-  Italienische Spezialitäten  
-  Mautweg 7, 9232 Rosegg  
-
-
-  Öffnungszeiten:  
-  MO: 15:00 - 18:30  
-  DI, MI, FR: 08:30 - 13:00 und 15:00 - 18:30  
-  DO, SA: 08:30 - 13:00  
+  Italienische Spezialitäten  \\
+  Mautweg 7, 9232 Rosegg  \\
+    \\
+  Öffnungszeiten:  \\
+  MO: 15:00 - 18:30  \\
+  DI, MI, FR: 08:30 - 13:00 und 15:00 - 18:30  \\
+  DO, SA: 08:30 - 13:00  \\
 baseurl: "/il-gusto" # the subpath of your site, e.g. /blog/
 url: "http://yourdomain.com" # the base hostname & protocol for your site
 twitter_username: jekyllrb
