--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,7 @@
 # Site settings
 title: Il Gusto
+phone: +43 (0) 664 - 73712148
+uid: ATU63006507
 email: enzomoda@aon.at
 description: > # this means to ignore newlines until "baseurl:"
   Italienische Spezialitäten<br>
