--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Il Gusto
-name: Cipoletta Vincenzo
+name: Cipolletta Vincenzo
 phone: +43 (0) 664 - 73712148
 subtitle: Italienische Spezialitäten
 address: "Mautweg 7, 9232 Rosegg"
