new landing page and footer

--- a/_config.yml
+++ b/_config.yml
@@ -11,16 +11,16 @@ opening_hours:
     hours: "15:00 - 18:30"
   di:
     title: "Di"
-    hours: "08:30 - 13:00, 15:00 - 18:30"
+    hours: "08:30 - 13:00 & 15:00 - 18:30"
   mi:
     title: "Mi"
-    hours: "08:30 - 13:00, 15:00 - 18:30"
+    hours: "08:30 - 13:00 & 15:00 - 18:30"
   do:
     title: "Do"
     hours: "08:30 - 13:00"
   fr:
     title: "Fr"
-    hours: "08:30 - 13:00, 15:00 - 18:30"
+    hours: "08:30 - 13:00 & 15:00 - 18:30"
   sa:
     title: "Sa"
     hours: "08:30 - 13:00"
