fixed mobile nav and added fb links

--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site settings
 title: Il Gusto
 name: Cipolletta Vincenzo
-phone: +43 (0) 664 - 73712148
+phone: +43-664-73712148
 subtitle: Italienische Spezialitäten
 address: "Mautweg 7, 9232 Rosegg"
 opening_hours:
