--- a/_config.yml
+++ b/_config.yml
@@ -34,8 +34,8 @@ description: > # this means to ignore newlines until "baseurl:"
   MO: 15:00 - 18:30<br>
   DI, MI, FR: 08:30 - 13:00 und 15:00 - 18:30<br>
   DO, SA: 08:30 - 13:00<br>
-baseurl: "/il-gusto" # the subpath of your site, e.g. /blog/
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+baseurl: "" # the subpath of your site, e.g. /blog/
+url: "il-gusto.info" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
 
